--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Fundacion para el desarrollo del pacifico sur</title>
 </head>
 <body>
   
 </body>
+<script src="DOM-JS/dom.js"></script>
 </html>
