Se realizo el apartado de sub-nav en cuento a diseño y maquetacion

--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://kit.fontawesome.com/04a8186d46.js" crossorigin="anonymous"></script>
   <title>Fundacion para el desarrollo del pacifico sur</title>
 </head>
+
 <body>
-  
+  <div class="container__sub__nav">
+    <div class="container__sub__nav__text">
+      <p class="sub__nav__text"><i class="fa-solid fa-phone container__sub__nav__text__icon"></i> Phone: (123) 0200 12345</p>
+      <p class="sub__nav__text"><i class="fa-solid fa-envelope container__sub__nav__text__icon"></i> Supportus@Ecogreen.com</p>
+    </div>
+
+
+    <div class="container__sub__nav__donate">
+      <div class="container__sub__nav__donate__icons">
+        <a href="#" class="container__sub__nav__donate__icon"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#" class="container__sub__nav__donate__icon"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="#" class="container__sub__nav__donate__icon"><i class="fa-brands fa-twitter"></i></a>
+      </div>
+
+      <input type="button" value="DONATE NOW" class="btn__donate">
+    </div>
+
+  </div>
 </body>
 <script src="DOM-JS/dom.js"></script>
+
 </html>
