Se creo la seccion del nav en la pagina

--- a/index.html
+++ b/index.html
@@ -11,24 +11,55 @@
 </head>
 
 <body>
-  <div class="container__sub__nav">
-    <div class="container__sub__nav__text">
-      <p class="sub__nav__text"><i class="fa-solid fa-phone container__sub__nav__text__icon"></i> Phone: (123) 0200 12345</p>
-      <p class="sub__nav__text"><i class="fa-solid fa-envelope container__sub__nav__text__icon"></i> Supportus@Ecogreen.com</p>
-    </div>
-
-
-    <div class="container__sub__nav__donate">
-      <div class="container__sub__nav__donate__icons">
-        <a href="#" class="container__sub__nav__donate__icon"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="#" class="container__sub__nav__donate__icon"><i class="fa-brands fa-linkedin-in"></i></a>
-        <a href="#" class="container__sub__nav__donate__icon"><i class="fa-brands fa-twitter"></i></a>
+  <div class="sub__nav">
+    <div class="sub__nav__container">
+      <div class="sub__nav__container__text">
+        <p class="sub__nav__text"><i class="fa-solid fa-phone sub__nav__container__text__icon"></i> Phone: (123) 0200 12345</p>
+        <p class="sub__nav__text"><i class="fa-solid fa-envelope sub__nav__container__text__icon"></i> Supportus@Ecogreen.com</p>
       </div>
-
-      <input type="button" value="DONATE NOW" class="btn__donate">
+  
+  
+      <div class="sub__nav__container__donate">
+        <div class="sub__nav__container__donate__icons">
+          <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+  
+        <input type="button" value="DONATE NOW" class="btn__donate">
+      </div>
+  
     </div>
-
   </div>
+  
+
+  <section class="nav">
+    <div class="nav__container">
+      <div class="nav__container__row">
+        <div class="nav__container__row__icon">
+         <a href="#"><img src="assets/logo.webp" alt=""></a>
+        </div>
+        <div class="nav__container__row__list">
+          <ul class="nav__container__row__list__ul">
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Home</a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Service <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Pages <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Blog <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Gallery <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Shop <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="nav__container__row__icon__search">
+          <a href="#" class="nav__container__row__icon__search__btn"><i class="fa-solid fa-magnifying-glass"></i></a>
+         </div>
+      </div>
+    </div>
+    
+  </section>
+
+
 </body>
 <script src="DOM-JS/dom.js"></script>
 
