Se pulieron detalles de diseño y ademas se esta trabajando en la galeria slider

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/04a8186d46.js" crossorigin="anonymous"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <link rel="shortcut icon" href="assets/LOGO-FUNDEPACSUR.jpg" type="image/x-icon">
   <title>Fundacion para el desarrollo del pacifico sur</title>
 </head>
 
@@ -14,51 +19,94 @@
   <div class="sub__nav">
     <div class="sub__nav__container">
       <div class="sub__nav__container__text">
-        <p class="sub__nav__text"><i class="fa-solid fa-phone sub__nav__container__text__icon"></i> Phone: (123) 0200 12345</p>
-        <p class="sub__nav__text"><i class="fa-solid fa-envelope sub__nav__container__text__icon"></i> Supportus@Ecogreen.com</p>
+        <p class="sub__nav__text"><i class="fa-solid fa-phone sub__nav__container__text__icon"></i> Phone: (123) 0200
+          12345</p>
+        <p class="sub__nav__text"><i class="fa-solid fa-envelope sub__nav__container__text__icon"></i>
+          Supportus@Ecogreen.com</p>
       </div>
-  
-  
+
+
       <div class="sub__nav__container__donate">
         <div class="sub__nav__container__donate__icons">
           <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-instagram"></i></a>
           <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-twitter"></i></a>
         </div>
-  
+
         <input type="button" value="DONATE NOW" class="btn__donate">
       </div>
-  
+
     </div>
   </div>
-  
+
 
   <section class="nav">
     <div class="nav__container">
       <div class="nav__container__row">
-        <div class="nav__container__row__icon">
-         <a href="#"><img src="assets/logo.webp" alt=""></a>
+        <div class="nav__container__row__icons">
+          <a href="#"><img src="assets/LOGO-FUNDEPACSUR.jpg" class="nav__container__row__icon"></a>
         </div>
         <div class="nav__container__row__list">
           <ul class="nav__container__row__list__ul">
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Home</a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Service <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Pages <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Blog <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Gallery <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Shop <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Contact</a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Home</a>
+            </li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Service
+                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Pages
+                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Blog
+                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Gallery
+                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Shop
+                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="#"
+                class="nav__container__row__list__li__title">Contact</a></li>
           </ul>
         </div>
 
         <div class="nav__container__row__icon__search">
           <a href="#" class="nav__container__row__icon__search__btn"><i class="fa-solid fa-magnifying-glass"></i></a>
-         </div>
+        </div>
       </div>
     </div>
-    
+
   </section>
 
+
+  <section section class="galeria__slider" id="galeria__slider">
+    <div class="galeria__slider__container">
+      <div class="galeria__slider__container__items">
+        <img class="galeria__slider__container__item galeria-animate-right animate__slideInLeft" src="assets/gallery/programas-sociales.jpeg" style="width:100%">
+      </div>
+      <div class="galeria__slider__container__items">
+      <img class="galeria__slider__container__item galeria-animate-left animate__slideInRight" src="assets/gallery/programas-sociales-1.jpeg" style="width:100%">
+    </div>
+    <div class="galeria__slider__container__items">
+      <img class="galeria__slider__container__item galeria-animate-right animate__slideInRight" src="assets/gallery/programas-sociales-2.jpeg" style="width:100%">
+    </div>
+    <div class="galeria__slider__container__items">
+      <img class="galeria__slider__container__item galeria-animate-right animate__slideInRight" src="assets/gallery/programas-sociales-3.jpeg" style="width:100%">
+    </div>
+
+    <div class="galeria__slider__container__arrows">
+        <div class="galeria__slider__container__arrow-prev" onclick="plusDivs(-1)">&#10094;</div>
+        <div class="galeria__slider__container__arrow-next" onclick="plusDivs(1)">&#10095;</div>
+    </div>
+
+    <div class="galeria__slider__container__circles">
+      <span class="galeria__slider__container__circle" onclick="currentDiv(1)"></span>
+      <span class="galeria__slider__container__circle" onclick="currentDiv(2)"></span>
+      <span class="galeria__slider__container__circle" onclick="currentDiv(3)"></span>
+      <span class="galeria__slider__container__circle" onclick="currentDiv(4)"></span>
+    </div>
+
+
+
+    </div>
+
+  </section>
+  
 
 </body>
 <script src="DOM-JS/dom.js"></script>
