Se termino el diseño y la funcionalidad de la galeria

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/04a8186d46.js" crossorigin="anonymous"></script>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="shortcut icon" href="assets/LOGO-FUNDEPACSUR.jpg" type="image/x-icon">
   <title>Fundacion para el desarrollo del pacifico sur</title>
 </head>
@@ -77,36 +74,116 @@
   <section section class="galeria__slider" id="galeria__slider">
     <div class="galeria__slider__container">
       <div class="galeria__slider__container__items">
-        <img class="galeria__slider__container__item galeria-animate-right animate__slideInLeft" src="assets/gallery/programas-sociales.jpeg" style="width:100%">
+
+        <div class="galeria__slider__container__item galeria-animate-right animate__slideInLeft" style="background-image: linear-gradient(
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
+        ),url(assets/gallery/programas-sociales.jpeg); width:100%">
+          <div class="galeria__slider__container__info">
+            <div class="galeria__slider__container__info__text">
+              <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
+
+              <div class="slider__container__info__text__p">
+                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
+                rationally...
+              </div>
+              <div class="galeria__slider__container__info__btns">
+                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+
+                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
       <div class="galeria__slider__container__items">
-      <img class="galeria__slider__container__item galeria-animate-left animate__slideInRight" src="assets/gallery/programas-sociales-1.jpeg" style="width:100%">
-    </div>
-    <div class="galeria__slider__container__items">
-      <img class="galeria__slider__container__item galeria-animate-right animate__slideInRight" src="assets/gallery/programas-sociales-2.jpeg" style="width:100%">
-    </div>
-    <div class="galeria__slider__container__items">
-      <img class="galeria__slider__container__item galeria-animate-right animate__slideInRight" src="assets/gallery/programas-sociales-3.jpeg" style="width:100%">
-    </div>
+        <div class="galeria__slider__container__item galeria-animate-right animate__slideInLeft" style="background-image: linear-gradient(
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
+        ),url(assets/gallery/programas-sociales-1.jpeg); width:100%">
+          <div class="galeria__slider__container__info">
+            <div class="galeria__slider__container__info__text">
+              <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
 
-    <div class="galeria__slider__container__arrows">
+              <div class="slider__container__info__text__p">
+                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
+                rationally...
+              </div>
+              <div class="galeria__slider__container__info__btns">
+                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+
+                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="galeria__slider__container__items">
+        <div class="galeria__slider__container__item galeria-animate-right animate__slideInLeft" style="background-image: linear-gradient(
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
+        ),url(assets/gallery/programas-sociales-2.jpeg); width:100%">
+          <div class="galeria__slider__container__info">
+            <div class="galeria__slider__container__info__text">
+              <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
+
+              <div class="slider__container__info__text__p">
+                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
+                rationally...
+              </div>
+              <div class="galeria__slider__container__info__btns">
+                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+
+                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="galeria__slider__container__items">
+        <div class="galeria__slider__container__item galeria-animate-right animate__slideInLeft" style="background-image: linear-gradient(
+          rgba(0, 0, 0, 0.5),
+          rgba(0, 0, 0, 0.5)
+        ),url(assets/gallery/programas-sociales-3.jpeg); width:100%">
+          <div class="galeria__slider__container__info">
+            <div class="galeria__slider__container__info__text">
+              <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
+
+              <div class="slider__container__info__text__p">
+                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
+                rationally...
+              </div>
+              <div class="galeria__slider__container__info__btns">
+                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+
+                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="galeria__slider__container__arrows">
         <div class="galeria__slider__container__arrow-prev" onclick="plusDivs(-1)">&#10094;</div>
         <div class="galeria__slider__container__arrow-next" onclick="plusDivs(1)">&#10095;</div>
-    </div>
+      </div>
 
-    <div class="galeria__slider__container__circles">
-      <span class="galeria__slider__container__circle" onclick="currentDiv(1)"></span>
-      <span class="galeria__slider__container__circle" onclick="currentDiv(2)"></span>
-      <span class="galeria__slider__container__circle" onclick="currentDiv(3)"></span>
-      <span class="galeria__slider__container__circle" onclick="currentDiv(4)"></span>
-    </div>
+      <div class="galeria__slider__container__circles">
+        <span class="galeria__slider__container__circle" onclick="currentDiv(1)"></span>
+        <span class="galeria__slider__container__circle" onclick="currentDiv(2)"></span>
+        <span class="galeria__slider__container__circle" onclick="currentDiv(3)"></span>
+        <span class="galeria__slider__container__circle" onclick="currentDiv(4)"></span>
+      </div>
 
 
 
     </div>
 
   </section>
-  
+
 
 </body>
 <script src="DOM-JS/dom.js"></script>
