se termino la seccion del footer

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <div class="footer__container__subscribe">
         <div class="container__subscribe__column">
           <div class="container__subscribe__title">
-            <h4 class="container__subscribe__text">Subscribe Us</h4>
+            <h4 class="container__subscribe__text">Suscribete</h4>
           </div>
           <h5 class="container__subscribe__form__title">Subscribe to our newsletter!</h5>
           <form method="post" accept-charset="utf-8" class="container__subscribe__form">
@@ -292,6 +292,22 @@
   </section>
     
 </footer>
+
+<!--Footer Bottom-->
+<section class="footer__bottom">
+  <div class="footer__bottom__container">
+    <div class="footer__bottom__container__row">
+      <div class="footer__bottom__container__left">
+        <div class="footer__bottom__container__left__text">
+          <a href="#" class="footer__bottom__container__left__title">Copyrights © 2022</a> All Rights Reserved. Powered by <a href="#" class="footer__bottom__container__left__title">Eco green.</a>
+        </div>
+      </div>
+      <div class="footer__bottom__container__right">
+        <a href="#" class="footer__bottom__container__right__title">Join Us Now!</a>
+      </div>
+    </div>
+  </div>
+</section>
 <script src="DOM-JS/dom.js"></script>
 
 </html>
