--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
   <div class="sub__nav">
     <div class="sub__nav__container">
       <div class="sub__nav__container__text">
-        <p class="sub__nav__text"><i class="fa-solid fa-phone sub__nav__container__text__icon"></i> Phone: (123) 0200
-          12345</p>
+        <p class="sub__nav__text"><i class="fa-solid fa-phone sub__nav__container__text__icon"></i> Phone: (57) 322-523-7465</p>
         <p class="sub__nav__text"><i class="fa-solid fa-envelope sub__nav__container__text__icon"></i>
-          Supportus@Ecogreen.com</p>
+          Correo@Ejemplo.com</p>
       </div>
 
 
@@ -30,7 +29,7 @@
           <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-twitter"></i></a>
         </div>
 
-        <input type="button" value="DONATE NOW" class="btn__donate">
+        <input type="button" value="DONAR AHORA" class="btn__donate">
       </div>
 
     </div>
@@ -45,20 +44,20 @@
         </div>
         <div class="nav__container__row__list">
           <ul class="nav__container__row__list__ul">
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Home</a>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Inicio</a>
             </li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Service
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Servicios
                 <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Pages
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Paginas
                 <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
             <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Blog
                 <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Gallery
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Galeria
                 <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Shop
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Donaciones
                 <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
             <li class="nav__container__row__list__li"><a href="#"
-                class="nav__container__row__list__li__title">Contact</a></li>
+                class="nav__container__row__list__li__title">Contacto</a></li>
           </ul>
         </div>
 
@@ -84,13 +83,12 @@
               <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
 
               <div class="slider__container__info__text__p">
-                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
-                rationally...
+                FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
 
-                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
               </div>
             </div>
           </div>
@@ -107,13 +105,12 @@
               <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
 
               <div class="slider__container__info__text__p">
-                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
-                rationally...
+                FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
 
-                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
               </div>
             </div>
           </div>
@@ -129,13 +126,12 @@
               <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
 
               <div class="slider__container__info__text__p">
-                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
-                rationally...
+                FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
 
-                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
               </div>
             </div>
           </div>
@@ -151,13 +147,12 @@
               <h1 class="slider__container__info__title">Fundacion para el desarrollo del pacifico sur</h1>
 
               <div class="slider__container__info__text__p">
-                Great explorer of the truth, the master-builder of human happiness<br> not know how to pursue pleasure
-                rationally...
+                FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="READ MORE" class="galeria__slider__container__info__btn">
+                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
 
-                <input type="button" value="GET INVOLVED" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
               </div>
             </div>
           </div>
@@ -201,11 +196,10 @@
         </div>
   
         <ul class="footer__container__info__contact">
-          <li class="footer__container__info__contact__li"><i class="fa-solid fa-location-dot footer__container__info__contact__icon"></i>22/121 Apple Street, New York, USA</li>
-          <li class="footer__container__info__contact__li"><i class="fa-solid fa-phone footer__container__info__contact__icon"></i> Phone: (123) 0200
-            12345</li>
+          <li class="footer__container__info__contact__li"><i class="fa-solid fa-location-dot footer__container__info__contact__icon"></i>3/56 Tumaco, Nariño, Colombia</li>
+          <li class="footer__container__info__contact__li"><i class="fa-solid fa-phone footer__container__info__contact__icon"></i> Phone: (57) 3225237465-3152387502</li>
           <li class="footer__container__info__contact__li"><i class="fa-solid fa-envelope footer__container__info__contact__icon"></i>
-            Supportus@Ecogreen.com</li>
+            Correo@Ejemplo.com</li>
         </ul>
       </div>
   
@@ -216,12 +210,12 @@
   
         <div class="footer__container__quick-links__list">
           <ul class="footer__container__quick-links__ul">
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">About Our Eco green</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Eco System</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Organic Living</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Good Nature</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Testimonials</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Upcoming Events</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Acerca de Fundepacsur</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Servicios</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Dona ahora</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Galeria</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Testimonios</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Próximos Eventos</a></li>
           </ul>
         </div>
       </div>
@@ -238,11 +232,11 @@
                 <a href="" class="container__upcoming-events__list__post-link">
                   <img src="assets/gallery/programas-sociales.jpeg" class="container__upcoming-events__list__post__img">
                 </a>
-              </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">How to Reduce Your waste</h5></a>
+              </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Atencion psicosocial</h5></a>
   
               <div class="container__upcoming-events__list__post__info">
                 <i class="fa-solid fa-calendar"></i>
-                02 May, 2018
+                02 May, 2022
               </div>
             </div>
             
@@ -251,11 +245,11 @@
                 <a href="" class="container__upcoming-events__list__post-link">
                   <img src="assets/gallery/programas-sociales-3.jpeg" class="container__upcoming-events__list__post__img">
                 </a>
-              </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Ozone Layer – Signs</h5></a>
+              </div><a href="#" class="footer__container__upcoming-events__list__post_img-title__link"><h5 class="footer__container__upcoming-events__list__post_img-title">Diagnóstico inicial en entidades que presten servicios de salud.</h5></a>
   
               <div class="container__upcoming-events__list__post__info">
                 <i class="fa-solid fa-calendar"></i>
-                15 May, 2020
+                15 May, 2022
               </div>
             </div>
           </div>
@@ -267,15 +261,14 @@
           <div class="container__subscribe__title">
             <h4 class="container__subscribe__text">Suscribete</h4>
           </div>
-          <h5 class="container__subscribe__form__title">Subscribe to our newsletter!</h5>
+          <h5 class="container__subscribe__form__title">¡Suscríbete para estar al tanto!</h5>
           <form method="post" accept-charset="utf-8" class="container__subscribe__form">
             <input type="hidden" id="uri2" name="uri" value="themeforest">
             <input type="hidden" value="en_US" name="loc">
-            <input type="email" placeholder="Email address...." class="container__subscribe__form__mail">
+            <input type="email" placeholder="Correo electrónico...." class="container__subscribe__form__mail">
             <button type="submit" class="container__subscribe__form__btn"><i class="fa fa-paper-plane"></i></button>
           </form>
-          <p class="container__subscribe__text__mail">We don’t do mail to spam &amp; your mail
-            id is confidential.</p>
+          <p class="container__subscribe__text__mail">No enviamos correo a spam &amp; su identificación de correo es confidencial.</p>
   
             <ul class="container__subscribe__social-icons">
              
@@ -299,11 +292,11 @@
     <div class="footer__bottom__container__row">
       <div class="footer__bottom__container__left">
         <div class="footer__bottom__container__left__text">
-          <a href="#" class="footer__bottom__container__left__title">Copyrights © 2022</a> All Rights Reserved. Powered by <a href="#" class="footer__bottom__container__left__title">Eco green.</a>
+          <a href="#" class="footer__bottom__container__left__title">Río Software Copyright © 2022</a> todos los derechos reservados. Creado por <a href="#" class="footer__bottom__container__left__title">Rio Software.</a>
         </div>
       </div>
       <div class="footer__bottom__container__right">
-        <a href="#" class="footer__bottom__container__right__title">Join Us Now!</a>
+        <a href="#" class="footer__bottom__container__right__title">Únete a nosotros ahora!</a>
       </div>
     </div>
   </div>
