Se termino la funcion del boton de scroll top

--- a/index.html
+++ b/index.html
@@ -301,6 +301,9 @@
     </div>
   </div>
 </section>
-<script src="DOM-JS/dom.js"></script>
+
+<!-- scroll btn -->
+<button class="scroll-top-btn hidden">&#11014;</button>
+<script src="DOM-JS/dom.js" type="module"></script>
 
 </html>
