Se termino la seccion sobre nosotros

--- a/index.html
+++ b/index.html
@@ -178,6 +178,31 @@
     </div>
 
   </section>
+  
+   <section class="about-us">
+    <div class="about-us__container">
+      <div class="about-us__container__row">
+        <div class="about-us__container__row__imgs">
+          <div class="about-us__container__row__img">
+            <img src="assets/Images-call-to-action-(Main banner)/Images-call- to-action-6-about.jpeg" class="about-us__container__row__img-1" alt="">
+          </div>
+          <div class="about-us__container__row__img">
+            <img src="assets/Images-call-to-action-(Main banner)/Images-call- to-action-3.jpeg" class="about-us__container__row__img-2" alt="">
+          </div>
+        </div>
+
+        <div class="about-us__container__row__text">
+          <h2 class="about-us__container__row__text__title">Sobre nosotros</h2>
+          <h3 class="about-us__container__row__text__sub-title">Hemos estado salvando y cambiando vidas</h3>
+          <p class="about-us__container__row__p">FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica; propendiendo por constituirse en una organización benéfica que ofrece alternativas a través de proyectos desarrollados unilateralmente o de manera conjunta con otras organizaciones, permitiendo implementar medidas para la mitigación  de las necesidades de las comunidades, para acceder a una ayuda oportuna y eficaz en los aspectos básicos de educación, servicios de salud, agua potable y energía, como vías de acceso e infraestructura para el desarrollo, orientación en los procesos nutricionales, psicosociales, ambientales  y agroindustriales, logrando así fomentar el desarrollo social regional.</p>
+
+          <div class="about-us__container__info__btns">
+            <input type="button" value="LEE MAS" class="about-us__container__info__btn">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </body>
 
@@ -268,7 +293,7 @@
             <input type="email" placeholder="Correo electrónico...." class="container__subscribe__form__mail">
             <button type="submit" class="container__subscribe__form__btn"><i class="fa fa-paper-plane"></i></button>
           </form>
-          <p class="container__subscribe__text__mail">No enviamos correo a spam &amp; su identificación de correo es confidencial.</p>
+          <p class="container__subscribe__text__mail">No enviamos correo spam &amp; su identificación de correo es confidencial.</p>
   
             <ul class="container__subscribe__social-icons">
              
@@ -305,5 +330,6 @@
 <!-- scroll btn -->
 <button class="scroll-top-btn hidden">&#11014;</button>
 <script src="DOM-JS/dom.js" type="module"></script>
+<script src="DOM-JS/gallery.js"></script>
 
 </html>
