Se esta trabajando en la seccion de mision y vision

--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
             </li>
             <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Servicios
                 <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Paginas
-                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
             <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Blog
-                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+                </a></li>
             <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Galeria
-                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Donaciones
-                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+                </a></li>
+            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Donaciones</a></li>
+                <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Sobre nosotros
+                </a></li>
             <li class="nav__container__row__list__li"><a href="#"
                 class="nav__container__row__list__li__title">Contacto</a></li>
           </ul>
@@ -179,7 +178,7 @@
 
   </section>
   
-   <section class="about-us">
+  <section class="about-us">
     <div class="about-us__container">
       <div class="about-us__container__row">
         <div class="about-us__container__row__imgs">
@@ -199,6 +198,46 @@
           <div class="about-us__container__info__btns">
             <input type="button" value="LEE MAS" class="about-us__container__info__btn">
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="mission-and-vision">
+    <div class="mission-and-vision__container">
+      <div class="mission-and-vision__container__row">
+        <div class="mission-and-vision__container__row__mission">
+
+          <div class="mission-and-vision__container__row__mission__icons">
+            <div class="mission-and-vision__container__row__mission__icon">
+              <img src="assets/icons/bullseye-arrow.svg" class="container__row__mission__icon-bullseye-arrow" alt="">
+            </div>
+          </div>
+          <h2 class="mission-and-vision__container__row__title">Mision</h2>
+          <p class="mission-and-vision__container__row__mission__p">
+            FUNDEPASUR tiene como objetivo primordial : Impulsar el desarrollo económico, social, cultural y ambiental con la participación e interacción de los diferentes agentes sociales – ONG, PARTICULARES, EMPRESAS E INSTITUCIONES PÚBLICAS en proyectos de carácter social, promoviendo y creando sentido de pertenencia social empresarial y medio ambiental, desarrollando así soluciones oportunas a los retos socioeconómicos de la región, entendiendo la importancia de unir esfuerzos para alcanzar metas comunes.
+          </p>
+
+          <div class="mission-and-vision__container__btns">
+            <input type="button" value="LEE MAS" class="mission-and-vision__container__btn">
+          </div>
+        
+        </div>
+        <div class="mission-and-vision__container__row__vision">
+          <div class="mission-and-vision__container__row__mission__icons">
+            <div class="mission-and-vision__container__row__vision__icon">
+              <i class="fas fa-eye container__row__vision__icon-eye"></i>
+            </div>
+          </div>
+          <h2 class="mission-and-vision__container__row__title">Vision</h2>
+          <p class="mission-and-vision__container__row__vision__p">
+            Ser una Fundación sólida y consolidada que haga parte activa del proceso de interacción con otras entidades con el fin de contribuir al mejoramiento y calidad de vida de la población vulnerable brindando servicio social y humanitario, siendo reconocidos por el compromiso social y de responsabilidad en las actividades que desarrollamos.
+          </p>
+
+          <div class="mission-and-vision__container__btns">
+            <input type="button" value="LEE MAS" class="mission-and-vision__container__btn">
+          </div>
+        
         </div>
       </div>
     </div>
