Se agrego mas diseño a la seccion de mision y vision

--- a/index.html
+++ b/index.html
@@ -208,6 +208,16 @@
       <div class="mission-and-vision__container__row">
         <div class="mission-and-vision__container__row__mission">
 
+          <div class="mission-and-vision__container__row__mission__container-triangule">
+            <div class="mission-and-vision__container__row__mission__triangule"></div>
+
+          </div>
+
+          <div class="mission-and-vision__container__row__mission__container-triangule-1">
+            <div class="mission-and-vision__container__row__mission__triangule-1"></div>
+
+          </div>
+
           <div class="mission-and-vision__container__row__mission__icons">
             <div class="mission-and-vision__container__row__mission__icon">
               <img src="assets/icons/bullseye-arrow.svg" class="container__row__mission__icon-bullseye-arrow" alt="">
@@ -224,6 +234,16 @@
         
         </div>
         <div class="mission-and-vision__container__row__vision">
+
+          <div class="mission-and-vision__container__row__vision__container-triangule">
+            <div class="mission-and-vision__container__row__vision__triangule"></div>
+
+          </div>
+
+          <div class="mission-and-vision__container__row__vision__container-triangule-1">
+            <div class="mission-and-vision__container__row__vision__triangule-1"></div>
+          </div>
+
           <div class="mission-and-vision__container__row__mission__icons">
             <div class="mission-and-vision__container__row__vision__icon">
               <i class="fas fa-eye container__row__vision__icon-eye"></i>
