Se pulieron detalles del nav

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="nav__container__row__list">
           <ul class="nav__container__row__list__ul">
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Inicio</a>
+            <li class="nav__container__row__list__li nav__container__row__list__li--active"><a href="#" class="nav__container__row__list__li__title nav__container__row__list__li__title--active">Inicio</a>
             </li>
             <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Servicios
                 <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
