Se termino la seccion de portafolio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="sub__nav">
+  <div class="sub__nav" id="donation">
     <div class="sub__nav__container">
       <div class="sub__nav__container__text">
         <p class="sub__nav__text"><i class="fa-solid fa-phone sub__nav__container__text__icon"></i> Phone: (57) 322-523-7465</p>
@@ -36,7 +36,7 @@
   </div>
 
 
-  <section class="nav">
+  <section class="nav" id="home">
     <div class="nav__container">
       <div class="nav__container__row">
         <div class="nav__container__row__icons">
@@ -46,16 +46,15 @@
           <ul class="nav__container__row__list__ul">
             <li class="nav__container__row__list__li nav__container__row__list__li--active"><a href="#" class="nav__container__row__list__li__title nav__container__row__list__li__title--active">Inicio</a>
             </li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Servicios
-                <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Blog
+            <li class="nav__container__row__list__li"><a href="#about-us" class="nav__container__row__list__li__title">Sobre nosotros
+            </a></li>
+            <li class="nav__container__row__list__li"><a href="#services" class="nav__container__row__list__li__title">Servicios
+              <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
+            <li class="nav__container__row__list__li"><a href="portfolio.html" class="nav__container__row__list__li__title">Portafolio
                 </a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Portafolio
-                </a></li>
-            <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Donaciones</a></li>
-                <li class="nav__container__row__list__li"><a href="#" class="nav__container__row__list__li__title">Sobre nosotros
-                </a></li>
-            <li class="nav__container__row__list__li"><a href="#"
+            <li class="nav__container__row__list__li"><a href="#donation" class="nav__container__row__list__li__title">Donaciones</a></li>
+    
+            <li class="nav__container__row__list__li"><a href="#contact"
                 class="nav__container__row__list__li__title">Contacto</a></li>
           </ul>
         </div>
@@ -178,12 +177,12 @@
 
   </section>
   
-  <section class="about-us">
+  <section class="about-us" id="about-us">
     <div class="about-us__container">
       <div class="about-us__container__row">
         <div class="about-us__container__row__imgs">
           <div class="about-us__container__row__img">
-            <img src="assets/Images-call-to-action-main-banner/Images-call-to-action-6-about.jpeg" class="about-us__container__row__img-1" alt="">
+            <img src="assets/Images-call-to-action-main-banner/Images-call-to-action-6-about-1.jpg" class="about-us__container__row__img-1" alt="">
           </div>
           <div class="about-us__container__row__img">
             <img src="assets/Images-call-to-action-main-banner/Images-call-to-action-3.jpeg" class="about-us__container__row__img-2" alt="">
@@ -263,7 +262,7 @@
     </div>
   </section>
 
-  <section class="services">
+  <section class="services" id="services">
     <div class="services__container">
       <div class="services__container__row">
         <div class="services__container__row__title">
@@ -393,7 +392,7 @@
 
 </body>
 
-<footer class="footer">
+<footer class="footer" id="contact">
   <section class="footer__container">
     <div class="footer__container__row">
       <div class="footer__container__info">
@@ -422,12 +421,12 @@
   
         <div class="footer__container__quick-links__list">
           <ul class="footer__container__quick-links__ul">
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Acerca de Fundepacsur</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#home" class="footer__container__quick-links__li__link">Inicio</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Sobre nosotros</a></li>
             <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Servicios</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Dona ahora</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Galeria</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Testimonios</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Próximos Eventos</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Portafolio</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#donation" class="footer__container__quick-links__li__link">Dona ahora</a></li>
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Contacto</a></li>
           </ul>
         </div>
       </div>
