--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Fundacion para el desarrollo del pacifico sur es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/04a8186d46.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+  <!-- Sub nav -->
   <div class="sub__nav" id="donation">
     <div class="sub__nav__container">
       <div class="sub__nav__container__text">
@@ -29,13 +31,13 @@
           <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-twitter"></i></a>
         </div>
 
-        <input type="button" value="DONAR AHORA" class="btn__donate">
+        <a href="donation.html" class="sub__nav__container__donate__icon sub__nav__container__donate__icon--modifier"><input type="button" value="DONAR AHORA" class="btn__donate"></a>
       </div>
 
     </div>
   </div>
 
-
+  <!-- Nav -->
   <section class="nav" id="home">
     <div class="nav__container">
       <div class="nav__container__row">
@@ -52,7 +54,7 @@
               <span class="indicator__icon"><i class="fa-solid fa-angle-down"></i></span></a></li>
             <li class="nav__container__row__list__li"><a href="portfolio.html" class="nav__container__row__list__li__title">Portafolio
                 </a></li>
-            <li class="nav__container__row__list__li"><a href="#donation" class="nav__container__row__list__li__title">Donaciones</a></li>
+            <li class="nav__container__row__list__li"><a href="donation.html" class="nav__container__row__list__li__title">Donaciones</a></li>
     
             <li class="nav__container__row__list__li"><a href="#contact"
                 class="nav__container__row__list__li__title">Contacto</a></li>
@@ -67,7 +69,7 @@
 
   </section>
 
-
+  <!-- Galeria slider -->
   <section section class="galeria__slider" id="galeria__slider">
     <div class="galeria__slider__container">
       <div class="galeria__slider__container__items">
@@ -84,9 +86,9 @@
                 FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
+                <a href="#about-us"><input type="button" value="LEE MAS" class="galeria__slider__container__info__btn"></a>
 
-                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <a href="donation.html"> <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier"></a>
               </div>
             </div>
           </div>
@@ -106,9 +108,9 @@
                 FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
+                <a href="#about-us"><input type="button" value="LEE MAS" class="galeria__slider__container__info__btn"></a>
 
-                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <a href="donation.html"> <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier"></a>
               </div>
             </div>
           </div>
@@ -127,9 +129,9 @@
                 FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
+                <a href="#about-us"><input type="button" value="LEE MAS" class="galeria__slider__container__info__btn"></a>
 
-                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <a href="donation.html"> <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier"></a>
               </div>
             </div>
           </div>
@@ -148,9 +150,9 @@
                 FUNDEPASUR es una organización sin ánimo de lucro, que actúa en el sur occidente colombiano, prestando servicio social y humanitario, enfocada a las poblaciones con altos niveles de marginación social, cultural y económica...
               </div>
               <div class="galeria__slider__container__info__btns">
-                <input type="button" value="LEE MAS" class="galeria__slider__container__info__btn">
+                <a href="#about-us"><input type="button" value="LEE MAS" class="galeria__slider__container__info__btn"></a>
 
-                <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier">
+                <a href="donation.html"> <input type="button" value="QUIERO INVOLUCRARME" class="galeria__slider__container__info__btn galeria__slider__container__info__btn--modifier"></a>
               </div>
             </div>
           </div>
@@ -176,7 +178,7 @@
     </div>
 
   </section>
-  
+  <!-- about-us -->
   <section class="about-us" id="about-us">
     <div class="about-us__container">
       <div class="about-us__container__row">
@@ -201,7 +203,7 @@
       </div>
     </div>
   </section>
-
+  <!-- mission and vision -->
   <section class="mission-and-vision">
     <div class="mission-and-vision__container">
       <div class="mission-and-vision__container__row">
@@ -261,7 +263,7 @@
       </div>
     </div>
   </section>
-
+  <!-- Services -->
   <section class="services" id="services">
     <div class="services__container">
       <div class="services__container__row">
@@ -391,7 +393,7 @@
   </section>
 
 </body>
-
+<!-- Footer -->
 <footer class="footer" id="contact">
   <section class="footer__container">
     <div class="footer__container__row">
@@ -422,11 +424,16 @@
         <div class="footer__container__quick-links__list">
           <ul class="footer__container__quick-links__ul">
             <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#home" class="footer__container__quick-links__li__link">Inicio</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Sobre nosotros</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Servicios</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Portafolio</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#donation" class="footer__container__quick-links__li__link">Dona ahora</a></li>
-            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#" class="footer__container__quick-links__li__link">Contacto</a></li>
+
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#about-us" class="footer__container__quick-links__li__link">Sobre nosotros</a></li>
+
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#services" class="footer__container__quick-links__li__link">Servicios</a></li>
+
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="portfolio.html" class="footer__container__quick-links__li__link">Portafolio</a></li>
+
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="donation.html" class="footer__container__quick-links__li__link">Dona ahora</a></li>
+
+            <li class="footer__container__quick-links__li"><i class="fa-solid fa-caret-right footer__container__quick-links__li__icon"></i><a href="#contact" class="footer__container__quick-links__li__link">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -486,7 +493,12 @@
               <li class="container__subscribe__social-icon"><a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-facebook-f"></i></a></li>
               <li class="container__subscribe__social-icon"><a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-instagram"></i></a></li>
               <li class="container__subscribe__social-icon"> <a href="#" class="sub__nav__container__donate__icon"><i class="fa-brands fa-twitter"></i></a></li>
+
+              <div class="sub__nav__container__donate sub__nav__container__donate--footer">
+                <a href="donation.html"><input type="button" value="DONAR AHORA" class="btn__donate"></a>
+              </div>
             </ul>
+
         </div>
       </div>
     </div>
